<resources>
    <string name="app_name">Azkar-Ramadhan</string>
    <string name="db_source">azkarenglish.db</string>
    <string name="title_activity_quran">Holy Quran</string>
    <string name="title_activity_occasions">Azkar by occasions</string>
    <string name="title_activity_category">Categories</string>
    <string name="title_activity_favorites">My Favorites</string>
    <string name="title_activity_azkars">Azkar And Dua</string>
    <string name="title_activity_azkar">Azkar</string>
    <string name="title_contactus">Contact US</string>
    <string name="title_about">About US</string>
    <string name="ratethisapp_msg">If you like this app.Please take a moment to rate it. It would\'t take  no more than a minute!.</string>
    <string name="ratethisapp_title">Rate Us</string>
    <string name="about_msg"> IronCodes Consulting
Software Development
Transform your culture and operations to execute more efficiently, champion the customer, and achieve optimal performance. </string>
     <string name="nointernet_msg">periksa koneksi internet Anda, dan coba lagi ..</string>
    <string name="copy_msg">The azkar has been copied to clipboard</string>
    <string name="action_copy">Copy</string>
    <string name="action_add_to_favorites">Add to Favorites</string>
    <string name="azkar_of_day">Azkar of the day</string>
    <string name="action_share">Share</string>
    <string name="rate_it">Rate it</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="share">Share via</string>
    <string name="title_activity_user_setting">Settings</string>
    <string name="speaker_enable">Reader</string>
    <string name="notif">Notification</string>
    <string name="pref_update_setting">General</string>
    <string name="pref_other">Other</string>
    <string name="pref_user_time">Time of Azkar of the day</string>
    <string name="btn_azkar">Azkar</string>
    <string name="btn_occasions">Occasions</string>
    <string name="btn_favorites">Favorites</string>
    <string name="btn_categories">Categories</string>
    <string name="btn_rateus">Rate Us</string>
    <string name="btn_reminder">Reminder</string>
    <string name="btn_setting">Settings</string>
    <string name="btn_Dashboard">Dashboard</string>
    <string name="btn_quranlist">Holy Quran</string>
    <string name="btn_LoadMore">Load More Azkar...</string>
    <string name="Current_Frequency">Current Frequency rate time is :</string>
    <string name="Chose_Frequency">Choose your favorite rate time for showing Azkar</string>
    <string name="Radio5txt">Shows Azkar impressions every 5 minutes</string>
    <string name="Radio15txt">Shows Azkar impressions every 15 minutes</string>
    <string name="Radio60txt">Shows Azkar impressions every 60 minutes</string>
    <string name="Radio120txt">Shows Azkar impressions every 120 minutes</string>
    <string name="Radio180txt">Shows Azkar impressions every 180 minutes</string>
    <string name="current_5m"> Current Frequency impressions rate is 5 minutes</string>
    <string name="current_15m"> Current Frequency impressions rate is 15 minutes</string>
    <string name="current_60m"> Current Frequency impressions rate is 60 minutes</string>
    <string name="current_120m"> Current Frequency impressions rate is 120 minutes</string>
    <string name="current_180m"> Current Frequency impressions rate is 180 minutes</string>
    <string name="imagebset">Setting</string>
    <string name="imagev">Azkar Reminder</string>
    <string name="contactemail">dev@ironcodes.tech</string>
    <string name="bahasa_langu">Bahasa Language</string>
    <string name="turkish_langu">Turkish Language</string>
    <string name="arabic_langu">Arabic Language</string>
    <string name="russian_langu">Russian Language</string>
    <string name="malay_langu">Malay Language</string>
    <string name="eng_langu">English Language</string>
    <string name="no_internet">There is No Internet Connection </string>
    <string name="wrong_link">Error with you network</string>
    <string name="player_stop">Surah stopped</string>
    <string name="player_play">Playing ...</string>
    <string name="sound_prepaer">Processing ...</string>
    <string name="sound_finished"> Sura finished</string>
    <string name="Sura1">Sura AlFatihah</string>
    <string name="Sura2">Sura Al Baqra</string>
    <string name="Sura3">"Sura Al Amran "</string>
    <string name="Link1">http://download.quranicaudio.com/quran/sa3ood_al-shuraym/001.mp3</string>
    <string name="Link2">http://download.quranicaudio.com/quran/sa3ood_al-shuraym/002.mp3</string>
    <string name="Link3">http://download.quranicaudio.com/quran/sa3ood_al-shuraym/003.mp3</string>
    <string name="Sura4">Sura AnNisa</string>
    <string name="Link4">"https://download.quranicaudio.com/quran/sa3ood_al-shuraym/004.mp3 "</string>
    <string name="Sura5">Sura AlMa\'idah</string>
    <string name="Link5">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/005.mp3</string>
    <string name="Sura6">Sura AlAn\'am</string>
    <string name="Link6">"https://download.quranicaudio.com/quran/sa3ood_al-shuraym/006.mp3 "</string>
    <string name="Sura7">Sura AlA\'raf</string>
    <string name="Link7">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/007.mp3</string>
    <string name="Sura8">Sura AlAnfal</string>
    <string name="Link8">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/008.mp3</string>
    <string name="Sura9">Sura AtTaubah</string>
    <string name="Link9">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/009.mp3</string>
    <string name="Sura10">Sura Yunus</string>
    <string name="Link10">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/010.mp3</string>
    <string name="Sura11">Sura Hud</string>
    <string name="Link11">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/011.mp3</string>
    <string name="Sura12">Sura Yusuf</string>
    <string name="Link12">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/012.mp3</string>
    <string name="Sura13">Sura ArRa\'d</string>
    <string name="Link13">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/013.mp3</string>
    <string name="Link14">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/014.mp3</string>
    <string name="Sura14">Sura Ibrahim</string>
    <string name="Sura15">Sura AlHijr</string>
    <string name="Link15">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/015.mp3</string>
    <string name="Sura16">Sura AnNahl</string>
    <string name="Link16">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/016.mp3</string>
    <string name="Sura17">Sura AlIsra</string>
    <string name="Link17">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/017.mp3</string>
    <string name="Sura18">Sura AlKahf</string>
    <string name="Link18">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/018.mp3</string>
    <string name="Sura19">Sura Maryam</string>
    <string name="Link19">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/019.mp3</string>
    <string name="Sura20">Sura TaHa</string>
    <string name="Sura21">Sura AlAnbiya</string>
    <string name="Sura22">Sura AlHajj</string>
    <string name="Sura23">Sura AlMu\'minun</string>
    <string name="Sura24">Sura AnNur</string>
    <string name="Sura25">Sura AlFurqan</string>
    <string name="Sura26">Sura AshShu\'ara</string>
    <string name="Sura27">Sura AnNaml</string>
    <string name="Sura28">Sura AlQasas</string>
    <string name="Sura29">Sura AlAnkabut</string>
    <string name="Sura30">Sura ArRum</string>
    <string name="Sura31">Sura Luqman</string>
    <string name="Sura32">Sura AsSajdah</string>
    <string name="Sura33">Sura AlAhzab</string>
    <string name="Sura34">Sura Saba</string>
    <string name="Sura35">Sura Fatir</string>
    <string name="Sura36">Sura YaSin</string>
    <string name="Sura37">Sura AsSaffat</string>
    <string name="Sura38">Sura Sad</string>
    <string name="Sura39">Sura AzZumar</string>
    <string name="Link20">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/020.mp3</string>
    <string name="Link21">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/021.mp3</string>
    <string name="Link22">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/022.mp3</string>
    <string name="Link23">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/023.mp3</string>
    <string name="Link24">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/024.mp3</string>
    <string name="Link25">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/025.mp3</string>
    <string name="Link26">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/026.mp3</string>
    <string name="Link27">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/027.mp3</string>
    <string name="Link28">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/028.mp3</string>
    <string name="Link29">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/029.mp3</string>
    <string name="Link30">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/030.mp3</string>
    <string name="Link31">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/031.mp3</string>
    <string name="Link32">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/032.mp3</string>
    <string name="Link33">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/033.mp3</string>
    <string name="Link34">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/034.mp3</string>
    <string name="Link35">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/035.mp3</string>
    <string name="Link36">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/036.mp3</string>
    <string name="Link37">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/037.mp3</string>
    <string name="Link38">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/038.mp3</string>
    <string name="Link39">https://download.quranicaudio.com/quran/sa3ood_al-shuraym/039.mp3</string>
    <string name="Sura40">Sura Ghafir</string>
    <string name="Sura41">Sura Fussilat</string>
    <string name="Sura42">Sura AshShura</string>
    <string name="Sura43">Sura AzZukhruf</string>
    <string name="Sura44">Sura AdDukhan</string>
    <string name="Sura45">Sura AlJathiyah</string>
    <string name="Sura46">Sura AlAhqaf</string>
    <string name="Sura47">Sura Muhammad</string>
    <string name="Sura48">Sura AlFath</string>
    <string name="Sura49">Sura AlHujurat</string>
    <string name="Sura50">Sura Qaf</string>
    <string name="Sura51">Sura AdhDhariyat</string>
    <string name="Sura52">Sura AtTur</string>
    <string name="Sura53">Sura AnNajm</string>
    <string name="Sura54">Sura Qamar</string>
    <string name="Sura55">Sura ArRahman</string>
    <string name="Sura56">Sura AlWaqi\'ah</string>
    <string name="Sura57">Sura AlHadid</string>
    <string name="Sura58">Sura AlMujadilah</string>
    <string name="Sura59">Sura AlHashr</string>
    <string name="Sura60">Sura AlMumtahanah</string>
    <string name="Sura61">Sura AsSaff</string>
    <string name="Sura62">Sura AlJumu\'ah</string>
    <string name="Sura63">Sura AlMunafiqun</string>
    <string name="Sura64">Sura AtTaghabun</string>
    <string name="Sura65">Sura AtTalaq</string>
    <string name="Sura66">Sura AtTahrim</string>
    <string name="Sura67">Sura AlMulk</string>
    <string name="Sura68">Sura AlQalam</string>
    <string name="Sura69">Sura AlHaqqah</string>
    <string name="Sura70">Sura AlMa\'arij</string>
    <string name="Sura71">Sura Nuh</string>
    <string name="Sura72">Sura AlJinn</string>
    <string name="Sura73">Sura AlMuzzammil</string>
    <string name="Sura74">Sura AlMuddaththir</string>
    <string name="Sura75">Sura AlQiyamah</string>
    <string name="Sura76">Sura AlInsan</string>
    <string name="time_quotes">Choice time for Quotes in screen</string>
</resources>