<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ramadan.azkar.MainActivity">

    <item
        android:id="@+id/menu_overflow"
        android:icon="@drawable/lang"
        app:showAsAction="always"
        android:title="">

        <menu>
            <item
                android:id="@+id/bahasa_lang"
                android:icon="@drawable/id"
                app:showAsAction="ifRoom"
                android:title="@string/bahasa_langu"/>


            <item
                android:id="@+id/turk_lang"
                android:icon="@drawable/tr"
                app:showAsAction="ifRoom"
                android:title="@string/turkish_langu"/>




            <item
                android:id="@+id/arabic_lang"
                android:icon="@drawable/ar"
                app:showAsAction="ifRoom"
                android:title="@string/arabic_langu"/>


            <item
                android:id="@+id/russian_lang"
                android:icon="@drawable/ru"
                app:showAsAction="ifRoom"
                android:title="@string/russian_langu"/>


            <item
                android:id="@+id/malay_labg"
                android:icon="@drawable/ms"
                app:showAsAction="ifRoom"
                android:title="@string/malay_langu"/>

            <item
                android:id="@+id/eng_labg"
                android:icon="@drawable/en"
                app:showAsAction="ifRoom"
                android:title="@string/eng_langu"/>


        </menu>




    </item>


</menu>
